Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123073

[macOS] QMediaRecorder failed to record an audio after reconnecting AirPods

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10
    • 6.5.3, 6.6.3, 6.7.0
    • Multimedia
    • None
    • macOS 14.3.1
      MacBook Pro 13-inch, M1, 2020
    • macOS
    • 2dd342a36 (dev), 9108662b0 (6.8), 05ef97033 (dev), da5d7f7f4 (6.9), 8b7a1c617 (tqtc/lts-6.8)
    • Multimedia wk 43-44, Multimedia wk 47-48, Multimedia wk 49-50

       

      QMediaRecorder failed to record an audio after reconnecting AirPods on Mac (maybe also relevant for any other bluetooth headset, or even for wired ones - I didn't check).

      It seems doesn't depend on multimedia backend, I can reproduce both with "darwin" and "ffmpeg".

      This problem causes a lot of complaints from end-users of real application.
      Meanwhile I was able to reproduce something like this in standard Qt Audio Recorder example, with the following steps:

      1. Connect AirPods to your Mac and and insert the earphone into your ear.
        So, it should look like this
      2.  Build and run Audio Recorder Example (Examples/<Qt Version>/multimedia/audiorecorder/)
      3. Select AirPods as Input Device
      4. Recorder an audio
      5. Check the recorded file - it should be OK 
      6. Put AirPods into the case and close the lid, so it will be disconnected
      7. Input device will be changed to "Default"  - Expected
        === THE BUG BEGINS ===
      8. Open AirPods case and insert the earphone into your ear, so device become active again.
      9. Select AirPods as Input Device again
      10. Try to record an audio
      11. Check the recorded file - it's empty (0 bytes) - BUG!!!

       

        1. image-2024-03-07-13-20-15-601.png
          182 kB
          Vladimir Belyavsky
        2. image-2024-03-07-13-25-24-900.png
          268 kB
          Vladimir Belyavsky
        For Gerrit Dashboard: QTBUG-123073
        # Subject Branch Project Status CR V

            npskalerud Nils Petter Skålerud
            studiosus Vladimir Belyavsky
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: